issue ECOSCOM-353 - On the closing document creation form, text fields are not aligned by the grid

--- a/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
+++ b/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
@@ -421,6 +421,10 @@
   margin-top: 5px;
 }
 
+.invariants-form .template-table .template-row.with-help .template-textarea {
+  width: calc(100% + 15px);
+}
+
 /* select */
 .invariants-form .template-table .template-row .template-select select {
   width: 100%;
